--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "edu-soft-ang",
-  "version": "0.0.0",
+  "version": "0.0.0", 
+  "engines": {
+    "node": "^14.20.0 || ^16.13.0 || >=18.10.0",
+    "npm": "^6.14.0"
+  },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,6 +22,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "express": "^4.21.1",
+    "jquery": "^3.7.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
